--- a/src/client/components/SearchResult/SearchResults.scss
+++ b/src/client/components/SearchResult/SearchResults.scss
@@ -6,7 +6,7 @@
   @include flex-justify(row, space-around);
   min-height: 50vh;
   padding: 2rem;
-  opacity: 0;
+  // opacity: 0;
   z-index: 0;
 }
 
