--- a/src/client/components/TrackList/TrackList.scss
+++ b/src/client/components/TrackList/TrackList.scss
@@ -1,17 +1,34 @@
 @import '../../sass/variables';
 @import '../../sass/mixins';
+@import '../../sass/placeHolders';
 
 .search-result, .error{
   flex-grow: 1;
   @include flex-justify(column, flex-start);
-  padding: 2rem;
   background-color: $blackTrasp2;
   border-radius: $borderRad2;
   margin: 1rem;
-
+  padding: 0 1rem;
   h2 {
-    font-size: 1.7rem;
+    font-size: $h2Size;
     font-family: $font1;
     color: $white;
   }
+}
+
+.search-result {
+  .title {
+    position: fixed;
+    z-index: 3;
+    padding: $h2Size 1rem;
+  }
+  .tracks {
+    @extend %scroll-bar;
+    padding: 0 1rem;
+    margin: ($h2Size*3) 0 2rem 0;
+  }
+}
+
+.error {
+  padding: 2rem;
 }
