--- a/src/client/sass/_placeHolders.scss
+++ b/src/client/sass/_placeHolders.scss
@@ -15,3 +15,27 @@
     text-decoration: none;
   }
 }
+
+%scroll-bar {
+  overflow-y: scroll;
+  // for firefox
+  scrollbar-width: thin;
+  scrollbar-color: $white rgba(255, 255, 255, 0);
+  // other browsers 
+  &::-webkit-scrollbar {
+    margin: 3px;
+    width: 8px;
+  }
+  &::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 10px;
+    height: 90%;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 20px;
+    &:hover{
+      background-color: $white;
+    }
+  }
+}
